PEAC-37-home-app getNewContents
